<resources>
    <string name="app_name">Deaflator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Icon & Menu Strings-->
    <string name="ic_more">More</string>
    <string name="ic_mic">Microphone</string>
    <string name="ic_stop">Stop Recording</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_features">Our Features</string>
    <string name="nav_about">About Deaflator</string>
    <!--Features Page Strings-->
    <string name="btn_skip">Get Started</string>
    <string name="tv_title_1">Translator For Everyone!</string>
    <string name="tv_info_1">Discover our translation system to help you communicate each other. Find out our virtual avatar too!</string>
    <string name="tv_title_2">Speech to Text to Sign Language</string>
    <string name="tv_info_2">Translate text from speech to sign or vice versa now its super easy!</string>
    <string name="tv_title_3">Sign Language Avatar</string>
    <string name="tv_info_3">Want to know a little bit or more about sign language? we provided several avatars so you can learn easily!</string>
    <!--Main Page Strings-->
    <string name="text_item_1">Text to Sign Language</string>
    <string name="text_item_2">Speech to Sign Language</string>
    <string name="text_start_recording">Press the Mic Button to Start Recording</string>
    <string name="til_dropdown">Choose Translation Mode</string>
    <string name="tv_sign_output">No File Attached</string>
    <string name="btn_process">Process</string>
    <string name="ic_list">List Recording</string>
    <string name="tv_no_recordings">No Recordings Available</string>
    <string name="text_start_record">Recording.. filename: %1$s</string>
    <string name="text_stop_record">Recording stopped, file saved as %1$s</string>
</resources>